<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/sm2"
    android:padding="3dp">
    <TextView
        android:id="@+id/tv_data_plain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipPlain" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_input_plain_sm2"
        android:layout_below="@+id/tv_data_plain"
        android:singleLine="false"
        android:scrollbars="vertical"
        android:inputType="textMultiLine"
        android:gravity="left|top"
        android:minLines="2"
        android:maxLines="2"
        android:digits="0123456789abcdefABCDEF"
        android:textSize="16sp"
        android:hint="@string/tipInputPlain"/>
    <TextView
        android:id="@+id/tv_data_cipher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_input_plain_sm2"
        android:text="@string/tipCipher" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_input_cipher_sm2"
        android:layout_below="@+id/tv_data_cipher"
        android:singleLine="false"
        android:scrollbars="vertical"
        android:inputType="textMultiLine"
        android:gravity="left|top"
        android:minLines="2"
        android:maxLines="2"
        android:digits="0123456789abcdefABCDEF"
        android:textSize="16sp"
        android:hint="@string/tipInputCipher"/>
    <TextView
        android:id="@+id/tv_key_pub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_input_cipher_sm2"
        android:text="@string/tipPubKey" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_pubkey_sm2"
        android:layout_below="@+id/tv_key_pub"
        android:singleLine="false"
        android:scrollbars="vertical"
        android:inputType="textMultiLine"
        android:gravity="left|top"
        android:minLines="2"
        android:maxLines="2"
        android:digits="0123456789abcdefABCDEF"
        android:textSize="16sp"
        android:hint="@string/tipInputPubKey"/>
    <TextView
        android:id="@+id/tv_key_pri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_pubkey_sm2"
        android:text="@string/tipPriKey" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_prikey_sm2"
        android:layout_below="@+id/tv_key_pri"
        android:singleLine="false"
        android:scrollbars="vertical"
        android:inputType="textMultiLine"
        android:gravity="left|top"
        android:minLines="2"
        android:maxLines="2"
        android:digits="0123456789abcdefABCDEF"
        android:textSize="16sp"
        android:hint="@string/tipInputPriKey"/>
    <TextView
        android:id="@+id/tv_key_signed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_prikey_sm2"
        android:text="@string/tipSigned" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_signed_sm2"
        android:layout_below="@+id/tv_key_signed"
        android:singleLine="false"
        android:scrollbars="vertical"
        android:inputType="textMultiLine"
        android:gravity="left|top"
        android:minLines="2"
        android:maxLines="2"
        android:textSize="16sp"
        android:digits="0123456789abcdefABCDEF"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bt_sign_sm2"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:layout_weight="1"
            android:text="@string/signData" />
        <Button
            android:id="@+id/bt_verify_sm2"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:layout_weight="1"
            android:text="@string/verifyData"/>
        <Button
            android:id="@+id/bt_encrypt_sm2"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:layout_weight="1"
            android:text="@string/encryptData"/>
        <Button
            android:id="@+id/bt_decrypt_sm2"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:layout_weight="1"
            android:text="@string/decryptData"/>
    </LinearLayout>
</RelativeLayout>